--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-        <p>Sou Gabriel Lima, um entusiasta de tecnologia com experiência em programação e cibersegurança. Adquiri conhecimentos através de cursos e projetos pessoais focados em desenvolvimento e segurança. No campo da cibersegurança, participei de Capture The Flag (CTFs) e conduzi pesquisas para identificar e relatar vulnerabilidades em empresas.</p>
+        <p>Sou um desenvolvedor apaixonado por tecnologia, sempre em busca de aprender, inovar e transformar ideias em soluções reais. Adoro explorar novas ferramentas e linguagens, criando projetos que fazem a diferença. Movido pela curiosidade, encaro desafios como oportunidades para crescer e contribuir para a evolução tecnológica.</p>
       </div>
 
       <div class="w3-container w3-card w3-white w3-margin-bottom">
